__kube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NS_PREFIX}seefit
  labels:
    name: seefit
    application: seeplus
    environment: ${RELEASE_ENV}
