__kube/gateway.yaml

apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
    - name: admin
      port: 8001
      targetPort: 8001
  selector:
    app: gateway

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      imagePullSecrets:
        - name: azurecr
      containers:
        - name: gateway
          image: inovretail.azurecr.io/ext/kong:2.8.1-alpine
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
              memory: 512Mi
            limits:
              cpu: "500m"
              memory: 1024Mi
          ports:
            - containerPort: 8000
            - containerPort: 8001
          volumeMounts:
            - name: kong-config
              mountPath: /kong-config

      volumes:
        - name: kong-config
          configMap:
            name: gateway-kong-config
